// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init - registerContentScript > should register multiple manifest scripts on new permissions 1`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "allFrames": undefined,
          "css": undefined,
          "excludeMatches": [
            "https://content-script.example.com/*",
          ],
          "id": "webext-dynamic-content-script-{"js":["script.js"],"matches":["https://granted.example.com/*"]}",
          "js": [
            "/script.js",
          ],
          "matches": [
            "https://granted.example.com/*",
          ],
          "persistAcrossSessions": true,
          "runAt": undefined,
        },
      ],
    ],
    [
      [
        {
          "allFrames": undefined,
          "css": undefined,
          "excludeMatches": [
            "https://content-script-extra.example.com/*",
          ],
          "id": "webext-dynamic-content-script-{"js":["otherScript.js"],"matches":["https://granted.example.com/*"]}",
          "js": [
            "/otherScript.js",
          ],
          "matches": [
            "https://granted.example.com/*",
          ],
          "persistAcrossSessions": true,
          "runAt": undefined,
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`init - registerContentScript > should register the manifest scripts on multiple new permissions 1`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "allFrames": undefined,
          "css": undefined,
          "excludeMatches": [
            "https://content-script.example.com/*",
          ],
          "id": "webext-dynamic-content-script-{"js":["script.js"],"matches":["https://granted.example.com/*"]}",
          "js": [
            "/script.js",
          ],
          "matches": [
            "https://granted.example.com/*",
          ],
          "persistAcrossSessions": true,
          "runAt": undefined,
        },
      ],
    ],
    [
      [
        {
          "allFrames": undefined,
          "css": undefined,
          "excludeMatches": [
            "https://content-script.example.com/*",
          ],
          "id": "webext-dynamic-content-script-{"js":["script.js"],"matches":["https://granted-more.example.com/*"]}",
          "js": [
            "/script.js",
          ],
          "matches": [
            "https://granted-more.example.com/*",
          ],
          "persistAcrossSessions": true,
          "runAt": undefined,
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`init - registerContentScript > should register the manifest scripts on new permissions 1`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "allFrames": undefined,
          "css": undefined,
          "excludeMatches": [
            "https://content-script.example.com/*",
          ],
          "id": "webext-dynamic-content-script-{"js":["script.js"],"matches":["https://granted.example.com/*"]}",
          "js": [
            "/script.js",
          ],
          "matches": [
            "https://granted.example.com/*",
          ],
          "persistAcrossSessions": true,
          "runAt": undefined,
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
